--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: 
+title: >-
+  Triple Backticks
 email: kevin@cantwell.io
 description: >- # this means to ignore newlines until "baseurl:"
   Musings on Development, Management, Fatherhood, and Life.
