--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: >-
-  Triple Backticks
+title: Triple Backticks
 email: kevin@cantwell.io
 description: >- # this means to ignore newlines until "baseurl:"
-  Musings on Development, Management, Fatherhood, and Life.
+  Honestly not sure what I'm planning to do with this yet.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://kevin.cantwell.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: kevrone
 github_username:  kevin-cantwell
 
